--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -136,67 +136,452 @@ These are results of `BookShelf` JSON Serialization performance for **ServiceSta
 
 #### .NET Core Benchmarks
 
-| Serializer | Objects	| "Time to serialize in s"	| "Time to deserialize in s"	| "Size in bytes"	| FileVersion
-| ---------- | -------- | ------------------------- | ----------------------------- | ----------------- | -----------
-ServiceStack<BookShelf> | 1 | 0.000 | 0.000 | 69 | 5.0.0.0
-ServiceStack<BookShelf> | 1 | 0.000 | 0.000 | 69 | 5.0.0.0
-ServiceStack<BookShelf> | 10 | 0.000 | 0.000 | 305 | 5.0.0.0
-ServiceStack<BookShelf> | 100 | 0.000 | 0.000 | 2827 | 5.0.0.0
-ServiceStack<BookShelf> | 500 | 0.000 | 0.000 | 14827 | 5.0.0.0
-ServiceStack<BookShelf> | 1000 | 0.000 | 0.001 | 29829 | 5.0.0.0
-ServiceStack<BookShelf> | 10000 | 0.004 | 0.006 | 317831 | 5.0.0.0
-ServiceStack<BookShelf> | 50000 | 0.018 | 0.031 | 1677831 | 5.0.0.0
-ServiceStack<BookShelf> | 100000 | 0.036 | 0.068 | 3377833 | 5.0.0.0
-ServiceStack<BookShelf> | 200000 | 0.073 | 0.146 | 6977833 | 5.0.0.0
-ServiceStack<BookShelf> | 500000 | 0.181 | 0.374 | 17777833 | 5.0.0.0
-ServiceStack<BookShelf> | 800000 | 0.290 | 0.606 | 28577833 | 5.0.0.0
-ServiceStack<BookShelf> | 1000000 | 0.363 | 0.756 | 35777835 | 5.0.0.0
-JsonNet<BookShelf> | 1 | 0.000 | 0.000 | 69 | 11.0.2.21924
-JsonNet<BookShelf> | 1 | 0.000 | 0.000 | 69 | 11.0.2.21924
-JsonNet<BookShelf> | 10 | 0.000 | 0.000 | 305 | 11.0.2.21924
-JsonNet<BookShelf> | 100 | 0.000 | 0.000 | 2827 | 11.0.2.21924
-JsonNet<BookShelf> | 500 | 0.000 | 0.000 | 14827 | 11.0.2.21924
-JsonNet<BookShelf> | 1000 | 0.001 | 0.001 | 29829 | 11.0.2.21924
-JsonNet<BookShelf> | 10000 | 0.005 | 0.006 | 317831 | 11.0.2.21924
-JsonNet<BookShelf> | 50000 | 0.025 | 0.035 | 1677831 | 11.0.2.21924
-JsonNet<BookShelf> | 100000 | 0.051 | 0.073 | 3377833 | 11.0.2.21924
-JsonNet<BookShelf> | 200000 | 0.105 | 0.153 | 6977833 | 11.0.2.21924
-JsonNet<BookShelf> | 500000 | 0.253 | 0.404 | 17777833 | 11.0.2.21924
-JsonNet<BookShelf> | 800000 | 0.400 | 0.726 | 28577833 | 11.0.2.21924
-JsonNet<BookShelf> | 1000000 | 0.520 | 0.920 | 35777835 | 11.0.2.21924
+<table>
+<thead>
+<tr>
+<th>Serializer</th>
+<th>Objects</th>
+<th>"Time to serialize in s"</th>
+<th>"Time to deserialize in s"</th>
+<th>"Size in bytes"</th>
+<th>FileVersion</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>ServiceStack</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>10</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>305</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>100</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>2827</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>500</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>14827</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>1000</td>
+<td>0.000</td>
+<td>0.001</td>
+<td>29829</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>10000</td>
+<td>0.004</td>
+<td>0.006</td>
+<td>317831</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>50000</td>
+<td>0.018</td>
+<td>0.031</td>
+<td>1677831</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>100000</td>
+<td>0.036</td>
+<td>0.068</td>
+<td>3377833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>200000</td>
+<td>0.073</td>
+<td>0.146</td>
+<td>6977833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>500000</td>
+<td>0.181</td>
+<td>0.374</td>
+<td>17777833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>800000</td>
+<td>0.290</td>
+<td>0.606</td>
+<td>28577833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>1000000</td>
+<td>0.363</td>
+<td>0.756</td>
+<td>35777835</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>10</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>305</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>100</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>2827</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>500</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>14827</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1000</td>
+<td>0.001</td>
+<td>0.001</td>
+<td>29829</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>10000</td>
+<td>0.005</td>
+<td>0.006</td>
+<td>317831</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>50000</td>
+<td>0.025</td>
+<td>0.035</td>
+<td>1677831</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>100000</td>
+<td>0.051</td>
+<td>0.073</td>
+<td>3377833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>200000</td>
+<td>0.105</td>
+<td>0.153</td>
+<td>6977833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>500000</td>
+<td>0.253</td>
+<td>0.404</td>
+<td>17777833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>800000</td>
+<td>0.400</td>
+<td>0.726</td>
+<td>28577833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1000000</td>
+<td>0.520</td>
+<td>0.920</td>
+<td>35777835</td>
+<td>11.0.2.21924</td>
+</tr></tbody></table>
+
 
 Which shows ServiceStack.Text being about **~30% faster** for serialization and **17.8% for deserialization** for 1M objects.
 
 #### .NET v4.7.1 Benchmarks
 
-| Serializer | Objects	| "Time to serialize in s"	| "Time to deserialize in s"	| "Size in bytes"	| FileVersion |
-| ---------- | -------- | ------------------------- | ----------------------------- | ----------------- | ----------- |
-ServiceStack<BookShelf> | 1 | 0.000 | 0.000 | 69 | 5.0.0.0
-ServiceStack<BookShelf> | 1 | 0.000 | 0.000 | 69 | 5.0.0.0
-ServiceStack<BookShelf> | 10 | 0.000 | 0.000 | 305 | 5.0.0.0
-ServiceStack<BookShelf> | 100 | 0.000 | 0.000 | 2827 | 5.0.0.0
-ServiceStack<BookShelf> | 500 | 0.000 | 0.000 | 14827 | 5.0.0.0
-ServiceStack<BookShelf> | 1000 | 0.000 | 0.001 | 29829 | 5.0.0.0
-ServiceStack<BookShelf> | 10000 | 0.004 | 0.007 | 317831 | 5.0.0.0
-ServiceStack<BookShelf> | 50000 | 0.021 | 0.035 | 1677831 | 5.0.0.0
-ServiceStack<BookShelf> | 100000 | 0.043 | 0.072 | 3377833 | 5.0.0.0
-ServiceStack<BookShelf> | 200000 | 0.087 | 0.161 | 6977833 | 5.0.0.0
-ServiceStack<BookShelf> | 500000 | 0.208 | 0.413 | 17777833 | 5.0.0.0
-ServiceStack<BookShelf> | 800000 | 0.340 | 0.669 | 28577833 | 5.0.0.0
-ServiceStack<BookShelf> | 1000000 | 0.417 | 0.836 | 35777835 | 5.0.0.0
-JsonNet<BookShelf> | 1 | 0.000 | 0.000 | 69 | 11.0.2.21924
-JsonNet<BookShelf> | 1 | 0.000 | 0.000 | 69 | 11.0.2.21924
-JsonNet<BookShelf> | 10 | 0.000 | 0.000 | 305 | 11.0.2.21924
-JsonNet<BookShelf> | 100 | 0.000 | 0.000 | 2827 | 11.0.2.21924
-JsonNet<BookShelf> | 500 | 0.000 | 0.000 | 14827 | 11.0.2.21924
-JsonNet<BookShelf> | 1000 | 0.001 | 0.001 | 29829 | 11.0.2.21924
-JsonNet<BookShelf> | 10000 | 0.005 | 0.007 | 317831 | 11.0.2.21924
-JsonNet<BookShelf> | 50000 | 0.025 | 0.038 | 1677831 | 11.0.2.21924
-JsonNet<BookShelf> | 100000 | 0.050 | 0.078 | 3377833 | 11.0.2.21924
-JsonNet<BookShelf> | 200000 | 0.100 | 0.170 | 6977833 | 11.0.2.21924
-JsonNet<BookShelf> | 500000 | 0.250 | 0.439 | 17777833 | 11.0.2.21924
-JsonNet<BookShelf> | 800000 | 0.402 | 0.777 | 28577833 | 11.0.2.21924
-JsonNet<BookShelf> | 1000000 | 0.503 | 0.992 | 35777835 | 11.0.2.21924
+<table>
+<thead>
+<tr>
+<th>Serializer</th>
+<th>Objects</th>
+<th>"Time to serialize in s"</th>
+<th>"Time to deserialize in s"</th>
+<th>"Size in bytes"</th>
+<th>FileVersion</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>ServiceStack</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>10</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>305</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>100</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>2827</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>500</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>14827</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>1000</td>
+<td>0.000</td>
+<td>0.001</td>
+<td>29829</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>10000</td>
+<td>0.004</td>
+<td>0.007</td>
+<td>317831</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>50000</td>
+<td>0.021</td>
+<td>0.035</td>
+<td>1677831</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>100000</td>
+<td>0.043</td>
+<td>0.072</td>
+<td>3377833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>200000</td>
+<td>0.087</td>
+<td>0.161</td>
+<td>6977833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>500000</td>
+<td>0.208</td>
+<td>0.413</td>
+<td>17777833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>800000</td>
+<td>0.340</td>
+<td>0.669</td>
+<td>28577833</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>ServiceStack</td>
+<td>1000000</td>
+<td>0.417</td>
+<td>0.836</td>
+<td>35777835</td>
+<td>5.0.0.0</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>69</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>10</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>305</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>100</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>2827</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>500</td>
+<td>0.000</td>
+<td>0.000</td>
+<td>14827</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1000</td>
+<td>0.001</td>
+<td>0.001</td>
+<td>29829</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>10000</td>
+<td>0.005</td>
+<td>0.007</td>
+<td>317831</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>50000</td>
+<td>0.025</td>
+<td>0.038</td>
+<td>1677831</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>100000</td>
+<td>0.050</td>
+<td>0.078</td>
+<td>3377833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>200000</td>
+<td>0.100</td>
+<td>0.170</td>
+<td>6977833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>500000</td>
+<td>0.250</td>
+<td>0.439</td>
+<td>17777833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>800000</td>
+<td>0.402</td>
+<td>0.777</td>
+<td>28577833</td>
+<td>11.0.2.21924</td>
+</tr>
+<tr>
+<td>JsonNet</td>
+<td>1000000</td>
+<td>0.503</td>
+<td>0.992</td>
+<td>35777835</td>
+<td>11.0.2.21924</td>
+</tr></tbody></table>
 
 Under ServiceStack.Text is about **~17% faster for serialization** and **~15.7% faster for deserialization** for 1M objects.
 
@@ -753,7 +1138,7 @@ We'll start with creating the `noop` block (short for "no operation") which func
 from the rendered page:
 
 ```html
-<div class="entry">
+{% raw %}<div class="entry">
   <h1>{{title}}</h1>
   <div class="body">
   {{#noop}}
@@ -761,7 +1146,7 @@ from the rendered page:
     {{page}}
   {{/noop}}
   </div>
-</div>
+</div>{% endraw %}
 ```
 
 The `noop` block is also the smallest implementation possible which needs to inherit `TemplateBlock` class, overrides the `Name` getter with 
