--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -43,6 +43,9 @@ This release includes support for .NET Core 2.1, number of performance improveme
 
 **[New Blog Web App](#new-blog-web-app)**
 
+**[Templates Admin Service](#templates-admin-service)**
+ - [Zero downtime deployments](#zero-downtime-deployments)
+
 **[New Template Filters](#new-template-filters)**
 
  **[OrmLite](#ormlite)**
@@ -136,7 +139,7 @@ These are results of `BookShelf` JSON Serialization performance for **ServiceSta
 
 #### .NET Core Benchmarks
 
-<table>
+<table class="table table-bordered">
 <thead>
 <tr>
 <th>Serializer</th>
@@ -362,7 +365,7 @@ Which shows ServiceStack.Text being about **~30% faster** for serialization and 
 
 #### .NET v4.7.1 Benchmarks
 
-<table>
+<table class="table table-bordered">
 <thead>
 <tr>
 <th>Serializer</th>
@@ -2527,6 +2530,55 @@ Template Content its sent and returns the output:
 By default the `evalTemplate` filter renders Templates in a new `TemplateContext` which can be customized to utilize any additional 
 `plugins`, `filters` and `blocks` available in the configured [TemplatePagesFeature](http://templates.servicestack.net/docs/view-engine), 
 or for full access you can use `{use:{context:true}}` to evaluate any Template content under the same context that `evalTemplate` is run on.
+
+## Templates Admin Service
+
+The new Templates Admin Service lets you run admin actions against a running instance which by default is only accessible to **Admin** users
+and can be called with:
+
+    /templates/admin
+
+Which will display the available actions which are currently only:
+
+ - `invalidateAllCaches` - Invalidate all caches and force pages to check if they've been modified on next request
+ - `RunInitPage` - Runs the Init page again
+
+### Zero downtime deployments
+
+These actions are useful after an xcopy/rsync deployment to enable zero downtime deployments by getting a running instance to invalidate all 
+internal caches and force existing pages to check if it has been modified, the next time it's called. 
+
+Actions can be invoked in the format with:
+
+    /templates/admin/{Actions}
+
+Which can be used to call 1 or more actions:
+
+ - /templates/admin/invalidateAllCaches
+ - /templates/admin/invalidateAllCaches,RunInitPage
+
+By default it's only available to be called by **Admin** Users (or using an [AuthSecret](/debugging#authsecret)) but can
+be changed with:
+
+```csharp
+Plugins.Add(new TemplatePagesFeature {
+    TemplatesAdminRole = RoleNames.AllowAnyUser, // Allow any Authenticated User to call /templates/admin service
+    //TemplatesAdminRole = RoleNames.AllowAnon,  // Allow anyone
+    //TemplatesAdminRole = null,                 // Do not register /templates/admin service
+});
+```
+
+This also now the preferred way to enable the [Metadata Debug Template](/debugging#metadata-debug-template) in production, which 
+is only available in `DebugMode` by default:
+
+```csharp
+Plugins.Add(new TemplatePagesFeature {
+    MetadataDebugAdminRole = RoleNames.Admin,          // Only allow Admin users to call /metadata/debug
+    //MetadataDebugAdminRole = RoleNames.AllowAnyUser, // Allow Authenticated Users
+    //MetadataDebugAdminRole = RoleNames.AllowAnon,    // Allow anyone
+    //MetadataDebugAdminRole = null,                   // Default. Do not register /metadata/debug service
+});
+```
 
 ## New Template Filters
 
