--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -139,7 +139,7 @@ These are results of `BookShelf` JSON Serialization performance for **ServiceSta
 
 #### .NET Core Benchmarks
 
-<table class="table table-bordered">
+<table class="table table-striped">
 <thead>
 <tr>
 <th>Serializer</th>
@@ -365,7 +365,7 @@ Which shows ServiceStack.Text being about **~30% faster** for serialization and 
 
 #### .NET v4.7.1 Benchmarks
 
-<table class="table table-bordered">
+<table class="table table-striped">
 <thead>
 <tr>
 <th>Serializer</th>
