--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1585,7 +1585,7 @@ makes extensive use of markdown.
 As `markdown` block only supports 2 usages its implementation is much simpler than the `capture` block above:
 
 ```csharp
-/// <summary>
+{% raw %}/// <summary>
 /// Converts markdown contents to HTML using the configured MarkdownConfig.Transformer.
 /// If a variable name is specified the HTML output is captured and saved instead. 
 ///
@@ -1620,7 +1620,7 @@ public class TemplateMarkdownBlock : TemplateBlock
         var nameString = name.ToString();
         scope.PageResult.Args[nameString] = MarkdownConfig.Transform(strFragment.ValueString).ToRawString();
     }
-}
+}{% endraw %}
 ```
 
 ### partial
