--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1354,12 +1354,12 @@ the `{{if}}` block ends up being even simpler which just needs to evaluate the a
 If **true** it writes the body with `WriteBodyAsync()` otherwise it evaluates any `else` statements with `WriteElseAsync()`:
 
 ```csharp
-/// <summary>
+{% raw %}/// <summary>
 /// Handlebars.js like if block
 /// Usages: {{#if a > b}} max {{a}} {{/if}}
 ///         {{#if a > b}} max {{a}} {{else}} max {{b}} {{/if}}
 ///         {{#if a > b}} max {{a}} {{else if b > c}} max {{b}} {{else}} max {{c}} {{/if}}
-/// </summary>
+/// </summary>{% endraw %}
 public class TemplateIfBlock : TemplateBlock
 {
     public override string Name => "if";
@@ -1390,14 +1390,14 @@ elements **properties**, a conventional `it` binding for the element and an `ind
 index of each element:
 
 ```csharp
-/// <summary>
+{% raw %}/// <summary>
 /// Handlebars.js like each block
 /// Usages: {{#each customers}} {{Name}} {{/each}}
 ///         {{#each customers}} {{it.Name}} {{/each}}
 ///         {{#each customers}} Customer {{index + 1}}: {{Name}} {{/each}}
 ///         {{#each numbers}} {{it}} {{else}} no numbers {{/each}}
 ///         {{#each numbers}} {{it}} {{else if letters != null}} has letters {{else}} no numbers {{/each}}
-/// </summary>
+/// </summary>{% endraw %}
 public class TemplateSimpleEachBlock : TemplateBlock
 {
     public override string Name => "each";
@@ -1439,7 +1439,7 @@ However the built-in [TemplateEachBlock.cs](https://github.com/ServiceStack/Serv
 has a larger implementation to support its richer feature-set where it also includes support for async results, custom element bindings and LINQ-like syntax for maximum expressiveness whilst utilizing expression caching to ensure any complex argument expressions are only parsed once.
 
 ```csharp
-/// <summary>
+{% raw %}/// <summary>
 /// Handlebars.js like each block
 /// Usages: {{#each customers}} {{Name}} {{/each}}
 ///         {{#each customers}} {{it.Name}} {{/each}}
@@ -1449,7 +1449,7 @@ has a larger implementation to support its richer feature-set where it also incl
 ///         {{#each numbers}} {{it}} {{else if letters != null}} has letters {{else}} no numbers {{/each}}
 ///         {{#each n in numbers where n > 5}} {{it}} {{else}} no numbers > 5 {{/each}}
 ///         {{#each n in numbers where n > 5 orderby n skip 1 take 2}} {{it}} {{else}}no numbers > 5{{/each}}
-/// </summary>
+/// </summary>{% endraw %}
 public class TemplateEachBlock : TemplateBlock { ... }
 ```
 
@@ -1520,14 +1520,14 @@ which inspects the `block.Argument` to determine whether it should capture the c
 string contents directly to the `OutputStream`.
 
 ```cshtml
-/// <summary>
+{% raw %}/// <summary>
 /// Special block which captures the raw body as a string fragment
 ///
 /// Usages: {{#raw}}emit {{ verbatim }} body{{/raw}}
 ///         {{#raw varname}}assigned to varname{{/raw}}
 ///         {{#raw appendTo varname}}appended to varname{{/raw}}
 /// </summary>
-public class TemplateRawBlock : TemplateBlock 
+public class TemplateRawBlock : TemplateBlock {% endraw %}
 ```
 
 ### capture
@@ -1591,7 +1591,7 @@ As `markdown` block only supports 2 usages its implementation is much simpler th
 ///
 /// Usages: {{#markdown}} ## The Heading {{/markdown}}
 ///         {{#markdown content}} ## The Heading {{/markdown}} HTML: {{content}}
-/// </summary>
+/// </summary>{% endraw %}
 public class TemplateMarkdownBlock : TemplateBlock
 {
     public override string Name => "markdown";
@@ -1620,7 +1620,7 @@ public class TemplateMarkdownBlock : TemplateBlock
         var nameString = name.ToString();
         scope.PageResult.Args[nameString] = MarkdownConfig.Transform(strFragment.ValueString).ToRawString();
     }
-}{% endraw %}
+}
 ```
 
 ### partial
