--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -654,7 +654,7 @@ would need to either manually upgrade to use Webpack 4 or stay on Webpack v3 ind
 
 In the meantime all major JavaScript frameworks have developed their own "CLI tools" to simplify development by taking over the configuration and 
 development workflow of projects using their frameworks. One of the ways they simplify development is by hiding Webpack configuration as an internal
-implementation detail whilst ensuring new projects start with same well-known compatible configuration detaults that has been battle tested across a 
+implementation detail whilst ensuring new projects start with same well-known compatible configuration defaults that has been battle tested across a 
 larger user base. By insulating Webpack we're also expecting upgrades to be a lot smoother as in theory only the JS Framework packages and tools would 
 need to be upgraded to support newer major Webpack versions, instead of every project using Webpack directly. 
 
@@ -665,7 +665,7 @@ All templates can be installed using our [dotnet-new](/dotnet-new) tool, which i
 
     $ npm install -g @servicestack/cli
 
-Avaialble SPA Project Templates now bootstrapped with latest CLI tools and project templates include: 
+Available SPA Project Templates now bootstrapped with latest CLI tools and project templates include: 
 
 ### [vue-spa](https://github.com/NetCoreTemplates/vue-spa)
 
@@ -840,7 +840,7 @@ document.querySelector("#Name")!.addEventListener("input", async e => {
 ```
 
 The Parcel Template also includes customizations to integrate it with .NET Core Project conventions and 
-[ServiceStack Templates](http://templates.servicestack.net) Website enabling acess to additional flexibility like dynamic Web Pages and server-side rendering
+[ServiceStack Templates](http://templates.servicestack.net) Website enabling access to additional flexibility like dynamic Web Pages and server-side rendering
 when needed.
 
 Seamless Parcel integration is another example of the benefits of ServiceStack Templates layered approach and non-intrusive handlebars syntax which 
@@ -854,7 +854,7 @@ and implemented its entire wishlist from the previous version, overcoming all fe
 into a full-featured dynamic templating language that provides a much simpler and more flexible alternative for developing server-generated Web Pages 
 than Razor, that's suitable for more use-cases than Razor. 
 
-#### Natural familar syntax for HTML Templating
+#### Natural familiar syntax for HTML Templating
 
 An elegant characteristic of ServiceStack Templates is its familiar and natural syntax, it introduces very little new syntax as it's able 
 to adopt popular language syntax that's prevalently used in Web Apps today, namely JavaScript Expressions, Vue Filters and Handlebars.js 
@@ -925,7 +925,7 @@ Instead to replicate `||` coalescing behavior on falsy values you can use C#'s `
 
 #### Lambda Expressions
 
-The new support for lambda expressions is now avaialble to all functional filters:
+The new support for lambda expressions is now available to all functional filters:
 
 [![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/templates/lambda-expression.png)](http://templates.servicestack.net/docs/expression-viewer#expression=map(range(1%2Ccount)%2C%20x%20%3D%3E%20x%20*%20x)&count=5)
 
@@ -955,7 +955,7 @@ Instead you can now use lambda expression syntax:
 ```
 
 Similar to the [Special string argument syntax](http://templates.servicestack.net/docs/syntax#special-string-argument-syntax) there's also
-shorthand support for single argument lambda expressions which can instead use `=>` without brackets or named arguemnts where it will 
+shorthand support for single argument lambda expressions which can instead use `=>` without brackets or named arguments where it will 
 be implicitly assigned to the `it` binding:
 
 ```hbs
@@ -1161,7 +1161,7 @@ public class TemplateNoopBlock : TemplateBlock
 {
     public override string Name => "noop";
 
-    public override Task WriteAsync(TemplateScopeContext scope, PageBlockFragment block, CancellationToken ct)
+    public override Task WriteAsync(TemplateScopeContext scope, PageBlockFragment block,CancellationToken t)
         => Task.CompletedTask;
 }
 ```
@@ -1448,7 +1448,7 @@ has a larger implementation to support its richer feature-set where it also incl
 ///         {{#each numbers}} {{it}} {{else}} no numbers {{/each}}
 ///         {{#each numbers}} {{it}} {{else if letters != null}} has letters {{else}} no numbers {{/each}}
 ///         {{#each n in numbers where n > 5}} {{it}} {{else}} no numbers > 5 {{/each}}
-///         {{#each n in numbers where n > 5 orderby n skip 1 take 2}} {{it}} {{else}}no numbers > 5{{/each}}
+///         {{#each n in numbers where n > 5 orderby n skip 1 take 2}} {{it}}{{else}}no numbers > 5{{/each}}
 /// </summary>{% endraw %}
 public class TemplateEachBlock : TemplateBlock { ... }
 ```
@@ -1686,7 +1686,7 @@ This example utilizes many of the features in html blocks, namely:
  a **string** of class names.
 
 All other properties like `id` and `selected` are treated like HTML attributes where if the property is a boolean like `selected` it's only displayed
-if its `true` otherwise all other html attribute's names and values are emitted as normal.
+if it's `true` otherwise all other html attribute names and values are emitted as normal.
 
 For a better illustration we can implement the same functionality above without using any html blocks:
 
@@ -1864,7 +1864,7 @@ in the [/log](http://blog.web-app.io/log) page above.
 
 ## Buffered View Pages
 
-After noticing performance regressions from non-buffereing Templates output when hosted behind a reverse proxy, Template Pages served by
+After noticing performance regressions from non-buffering Templates output when hosted behind a reverse proxy, Template Pages served by
 `TemplatePageFeature` are now being buffered. Whilst having Templates writing directly to the OutputStream showed marginal gains when
 accessed directly from Kestrel, they had a negative impact on page download speed when running behind a reverse proxy which is 
 the current recommendation for hosting .NET Core Web Apps. 
@@ -1949,7 +1949,7 @@ The [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/previ
 {{ response | return({ contentType:'text/plain' }) }}{% endraw %}
 ```
 
-The preview API above is what provides the new [Blog Wep App's](http://blog.web-app.io/) Live Preview feature where it will render any 
+The preview API above is what provides the new [Blog Web App's](http://blog.web-app.io/) Live Preview feature where it will render any 
 ServiceStack Templates provided in the **content** Query String or HTTP Post Form Data, e.g:
 
  - {% raw %}[/preview?content={{10|times|select:{pow(index,2)},}}](http://blog.web-app.io/preview?content={{10|times|select:{pow(index,2)},}}){% endraw %}
@@ -2100,7 +2100,7 @@ This will let you view the complete details of any order at the following URL:
 
 ### SQL Studio Example
 
-To take the adhoc SQL Query example even further, it also becomes trivial to implement a SQL Viewer to run adhoc queries on your App's configured database.
+To take the ad hoc SQL Query example even further, it also becomes trivial to implement a SQL Viewer to run ad hoc queries on your App's configured database.
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/rockwind/sql-viewer.png)](http://rockwind-sqlite.web-app.io/northwind/sql/)
 
@@ -2108,8 +2108,8 @@ The [Northwind SQL Viewer](http://rockwind-sqlite.web-app.io/northwind/sql/) abo
 
 #### [/northwind/sql/index.html](https://github.com/NetCoreWebApps/WebApp/blob/master/src/apps/rockwind/northwind/sql/index.html)
 
-A Template Page to render the UI, short-cut links to quickly see the last 10 rows of each table, a `<textarea/>` to capture the SQL Query which
-is sent to an API on every key stroke where the results are displayed instantly:
+A Template Page to render the UI, shortcut links to quickly see the last 10 rows of each table, a `<textarea/>` to capture the SQL Query which
+is sent to an API on every keystroke where the results are displayed instantly:
 
 ```html
 <h2>Northwind SQL Viewer</h2>
@@ -2176,7 +2176,7 @@ the partial HTML fragment with `return`:
 
 Thanks to the live development workflow of Template Pages, this is the quickest way we've previously been able to implement any of this functionality.
 Where all development can happen at runtime with no compilation or builds, yielding a highly productive iterative workflow to implement common functionality
-like viewing adhoc SQL Queries in Excel or even just to rapidly prototype APIs so they can be consumed immediately by Client Applications before 
+like viewing ad hoc SQL Queries in Excel or even just to rapidly prototype APIs so they can be consumed immediately by Client Applications before 
 formalizing them into Typed ServiceStack Services where they can take advantage of its rich typed metadata and ecosystem.
 
 ## New in Web Apps
@@ -2320,7 +2320,7 @@ public class MyServices : Service
 }
 ```
 
-Build the `server.csproj` project and copy the resulting `server.dll` to `/app/plugins/serer.dll` and start the server with the latest plugin:
+Build the `server.csproj` project and copy the resulting `server.dll` to `/app/plugins/server.dll` and start the server with the latest plugin:
 
     $ npm run server
 
@@ -2637,7 +2637,7 @@ An alternative way for including the [Hot Reload script](http://templates.servic
 ```
 
 Useful when needing to view Template HTML pages from a HTTP Server like Webpack's Hot Module Reload Server as it will hide any unevaluated
-Templates syntax. If you're only viewing your HTML Website through ServiceStack you can use the alternative syntax which wont render the
+Templates syntax. If you're only viewing your HTML Website through ServiceStack you can use the alternative syntax which won't render the
 empty `<i hidden></i>` in release builds:
 
 ```hbs
@@ -2750,7 +2750,7 @@ class Table
 }
 ```
 
-When generating the Table definition OrmLite will replace these substitute place holders with the value in each RDBMS DialectProvider's `Variables` Dictionary.
+When generating the Table definition OrmLite will replace these substitute placeholders with the value in each RDBMS DialectProvider's `Variables` Dictionary.
 
 ### Update from Object Dictionary
 
@@ -3102,3 +3102,5 @@ LogManager.LogFactory = new SerilogFactory(new LoggerConfiguration()
 
 
 # [v5.1.0 Release Notes](/releases/releases/v5.1.0)
+
+
