--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -796,6 +796,10 @@ This also highlights one of the benefits of utilizing npm's vibrant ecosystem wh
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/parcel.png)](https://github.com/NetCoreTemplates/parcel)
 
+Create new Parcel Template:
+
+    $ dotnet-new parcel ProjectName
+
 [Parcel](https://parceljs.org) aims to provide the simplest out-of-the-box development experience for creating modern npm-powered 
 Web Apps by getting out of your way and letting you develop Websites without regard for a bundling solution or JS Framework. 
 
@@ -841,7 +845,8 @@ document.querySelector("#Name")!.addEventListener("input", async e => {
 
 The Parcel Template also includes customizations to integrate it with .NET Core Project conventions and 
 [ServiceStack Templates](http://templates.servicestack.net) Website enabling access to additional flexibility like dynamic Web Pages and server-side rendering
-when needed.
+when needed. See the [Parcel Template docs](https://github.com/NetCoreTemplates/parcel#development-workflow) for information on the
+available `dev`, `build`, `dtos` and `publish` npm scripts used to manage the Development workflow.
 
 Seamless Parcel integration is another example of the benefits of ServiceStack Templates layered approach and non-intrusive handlebars syntax which 
 can be cleanly embedded in existing `.html` pages without interfering with static HTML analyzers like parcel and Webpack HTML plugins and their 
