--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1511,12 +1511,13 @@ Where any captured custom scripts are rendered at the
 [bottom of _layout.html](https://github.com/NetCoreTemplates/templates/blob/8a082a299d59a0b53b9b6e0a07a6fbabf7bf6e2c/MyApp/wwwroot/_layout.html#L49) with:
 
 ```html
+{% raw %}
     <script src="/assets/js/default.js"></script>
 
     {{ scripts | raw }}
 
 </body>
-</html>
+</html>{% endraw %}
 ```
 
 The implementation to support each of these usages is contained within 
@@ -1524,7 +1525,7 @@ The implementation to support each of these usages is contained within
 which inspects the `block.Argument` to determine whether it should capture the contents into the specified variable or write its raw 
 string contents directly to the `OutputStream`.
 
-```cshtml
+```csharp
 {% raw %}/// <summary>
 /// Special block which captures the raw body as a string fragment
 ///
@@ -1809,8 +1810,9 @@ Pages with `layout` or `partial` in their name remain hidden and are ignored in 
 If following the recommended `_{name}-partial.html` naming convention, you'll be able to reference them using just their name:
 
 ```hbs
+{% raw %}
 {{ 'menu' | partial }}          // Equivalent to:
-{{ '_menu-partial' | partial }}
+{{ '_menu-partial' | partial }}{% endraw %}
 ```
 
 ## Init Pages
@@ -1856,11 +1858,12 @@ The output of the `_init` page is captured in the `initout` argument which can b
 [log.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/log.html):
 
 ```html
+{% raw %}
 <div>
     Output from init.html:
 
     <pre>{{initout | raw}}</pre>
-</div>
+</div>{% endraw %}
 ```
 
 If there was an Exception with any of the SQL Statements it will be displayed in the `{{ htmlError }}` filter which can be later viewed 
@@ -1957,7 +1960,7 @@ The [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/previ
 The preview API above is what provides the new [Blog Web App's](http://blog.web-app.io/) Live Preview feature where it will render any 
 ServiceStack Templates provided in the **content** Query String or HTTP Post Form Data, e.g:
 
- - {% raw %}[/preview?content={{10|times|select:{pow(index,2)},}}](http://blog.web-app.io/preview?content={{10|times|select:{pow(index,2)},}}){% endraw %}
+ - [{% raw %}/preview?content={{10|times|select:{pow(index,2)},}}{% endraw %}]({% raw %}http://blog.web-app.io/preview?content={{10|times|select:{pow(index,2)},}}{% endraw %})
 
 Which renders the plain text response:
 
@@ -2030,7 +2033,7 @@ Any other unknown arguments like 'X-Powered-By' are returned as HTTP Response He
 
 Returning the `httpResult` above behaves similarly to customizing a HTTP response using return arguments:
 
-```
+```hbs
 {% raw %}{{ post | return({ format:'json', 'X-Powered-By':'ServiceStack Templates' }) }}{% endraw %}
 ```
 
@@ -2236,10 +2239,11 @@ args.tags ['technology','marketing']
 
 Where they can be referenced as an `object` or an `array` directly:
 
-```
+```html
+{% raw %}
 <a href="{{blog.href}}">{{blog.name}}</a>
 
-{{#each tags}} <em>{{it}}</em> {{/each}}
+{{#each tags}} <em>{{it}}</em> {{/each}}{% endraw %}
 ```
 
 The alternative approach is to give each argument value a different name:
@@ -2359,7 +2363,7 @@ document.querySelector("#Name")!.addEventListener("input", async e => {
     const request = new Hello();
     request.name = value;
     const response = await client.get(request);
-    // const response = await client.get<HelloResponse>(`/hello/${request.name}`); //call /hello/_name.html API
+    // const response = await client.get<HelloResponse>(`/hello/${request.name}`); //call /hello/_name.html
     result.innerHTML = response.result;
   } else {
     result.innerHTML = "";
@@ -2567,7 +2571,7 @@ be changed with:
 
 ```csharp
 Plugins.Add(new TemplatePagesFeature {
-    TemplatesAdminRole = RoleNames.AllowAnyUser, // Allow any Authenticated User to call /templates/admin service
+    TemplatesAdminRole = RoleNames.AllowAnyUser, // Allow any Authenticated User to call /templates/admin
     //TemplatesAdminRole = RoleNames.AllowAnon,  // Allow anyone
     //TemplatesAdminRole = null,                 // Do not register /templates/admin service
 });
