--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -615,7 +615,7 @@ This is utilized everywhere a `MemoryStream` is needed in ServiceStack except fo
 We haven't been notified of any, but if this change results in any issues, `MemoryStream` pooling can be disabled with:
 
 ```csharp
-SetConfig(new HostConfig { EnableOptimizations = true })
+SetConfig(new HostConfig { EnableOptimizations = false })
 ```
 
 If this does resolves any issues, [please let us know](https://github.com/ServiceStack/Issues/issues/new) so they can be resolved permanently without 
