manually make links

--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -673,7 +673,7 @@ Bootstrapped with [Vue CLI 3](https://cli.vuejs.org/).
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/vue-spa.png)](https://github.com/NetCoreTemplates/vue-spa)
 
- > Live Demo: http://vue-spa.web-templates.io
+ > Live Demo: [vue-spa.web-templates.io](http://vue-spa.web-templates.io)
 
 Create new Vue 2.5 Project:
 
@@ -685,7 +685,7 @@ Bootstrapped with [create-react-app](https://github.com/facebook/create-react-ap
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/react-spa.png)](https://github.com/NetCoreTemplates/react-spa)
 
-> Live Demo: http://react-spa.web-templates.io
+> Live Demo: [react-spa.web-templates.io](http://react-spa.web-templates.io)
 
 Create new React 16 Project:
 
@@ -697,7 +697,7 @@ Bootstrapped with [Angular CLI](https://cli.angular.io).
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/angular-spa.png)](https://github.com/NetCoreTemplates/angular-spa)
 
-> Live Demo: http://angular-spa.web-templates.io
+> Live Demo: [angular-spa.web-templates.io](http://angular-spa.web-templates.io)
 
 Create new Angular 6.1 Project:
 
@@ -709,7 +709,7 @@ Bootstrapped with [Aurelia CLI](https://aurelia.io/docs/build-systems/aurelia-cl
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/aurelia-spa.png)](https://github.com/NetCoreTemplates/aurelia-spa)
 
-> Live Demo: http://aurelia-spa.web-templates.io
+> Live Demo: [aurelia-spa.web-templates.io](http://aurelia-spa.web-templates.io)
 
 Create new Aurelia Project:
 
@@ -721,7 +721,7 @@ Bootstrapped with [Vue CLI 3](https://cli.vuejs.org/) and the [vuetify cli plugi
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/vuetify-spa.png)](https://github.com/NetCoreTemplates/vuetify-spa)
 
- > Live Demo: http://vuetify-spa.web-templates.io
+ > Live Demo: [vuetify-spa.web-templates.io](http://vuetify-spa.web-templates.io)
 
 Create new Vuetify Project:
 
@@ -733,7 +733,7 @@ Bootstrapped with [Nuxt.js starter template](https://nuxtjs.org/guide/installati
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/vue-nuxt.png)](https://github.com/NetCoreTemplates/vue-nuxt)
 
- > Live Demo: http://vue-nuxt.web-templates.io
+ > Live Demo: [vue-nuxt.web-templates.io](http://vue-nuxt.web-templates.io)
 
 Create new Nuxt.js v1.4.2 Project:
 
@@ -745,7 +745,7 @@ Bootstrapped with [Nuxt.js + Vuetify.js starter template](https://github.com/vue
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/vuetify-nuxt.png)](https://github.com/NetCoreTemplates/vuetify-nuxt)
 
- > Live Demo: http://vuetify-nuxt.web-templates.io
+ > Live Demo: [vuetify-nuxt.web-templates.io](http://vuetify-nuxt.web-templates.io)
 
 Create new Nuxt Vuetify Project:
 
@@ -2392,7 +2392,7 @@ as viewed in the context of a working example.
 
 [![](https://raw.githubusercontent.com/NetCoreApps/TemplatePages/master/src/wwwroot/assets/img/screenshots/blog.png)](http://blog.web-app.io)
 
-> Live Demo: http://blog.web-app.io
+> Live Demo: [blog.web-app.io](http://blog.web-app.io)
 
 ### Ultimate Simplicity
 
@@ -2408,8 +2408,9 @@ up a matching development environment with appropriate extensions and correct ve
 language, frameworks, build tools and other platform idiosyncrasies. 
 
 By contrast Web Apps require no development environment, no IDE's or build tools with all source code already included as part of the App download
-which can be modified in real-time by any text editor to instantly view changes as they're made. So Apps like http://redis.web-app.io which provide 
-a rich Admin UI for searching, browsing and modifying Redis's core data structures, can be easily enhanced by modifying a single 
+which can be modified in real-time by any text editor to instantly view changes as they're made. So Apps like 
+[redis.web-app.io](http://redis.web-app.io) which provide a rich Admin UI for searching, browsing and modifying Redis's core data structures, 
+can be easily enhanced by modifying a single 
 [index.html](https://github.com/NetCoreWebApps/Redis/blob/master/app/index.html) at the same time as using the App.
 
 ### Minimal
