--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -2421,21 +2421,22 @@ all the usual complexities of developing a C# Server and modern JS App has been 
 using a plain-text editor on the left, a live updating browser on the right and nothing else to interrupt your flow.
 
 Any infrastructure dependencies have also been avoided by using SQLite by default which is 
-[automatically created an populated on first run](/posts/web-app-customizations) if no database exists, or if preferred can be 
+[automatically created an populated on first run](#init-pages) if no database exists, or if preferred can be 
 [changed to use any other popular RDBMS](http://templates.servicestack.net/docs/web-apps#multi-platform-configurations) using just config.
 
 ### Multi User Blogging Platform
 
 Any number of users can Sign In via Twitter and publish content under their Twitter Username where only they'll be able to modify their own Content. 
 Setting up Twitter is as easy as it can be which just requires modifying the 
-[Twitter Auth Config in web.settings](/posts/web-app-customizations#customizable-auth-providers) with the URL where the blog 
+[Twitter Auth Config in web.settings](#customizable-auth-providers) with the URL where the blog 
 is hosted and the OAuth Keys for the Twitter OAuth App created at [apps.twitter.com](https://apps.twitter.com).
 
 ### Rich Content
 
 Whilst most blogging platforms just edit static text, each Post content has access to the powerful and 
 [Sandboxed](http://templates.servicestack.net/docs/sandbox) features in [templates.servicestack.net](http://templates.servicestack.net) 
-which can be used to create [Live Documents](/posts/live-document-example) or [Render Markdown](/posts/markdown-example) which is itself just 
+which can be used to create [Live Documents](http://blog.web-app.io/posts/live-document-example) or 
+[Render Markdown](http://blog.web-app.io/posts/markdown-example) which is itself just 
 [one of the available blocks](http://templates.servicestack.net/docs/blocks#markdown) where it will render to HTML any content between the `markdown` blocks:
 
 ```hbs
